<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:background="@color/colorSecondary"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <LinearLayout
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="@+id/area_info"
            android:id="@+id/capital_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">
        <TextView
                android:text="@string/label_capital"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                style="@style/labelTextAppearance"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="Warsaw"
                android:layout_marginTop="4dp"
                style="@style/valueTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/capitalView"/>
    </LinearLayout>


    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/region_info"
            app:layout_constraintTop_toTopOf="@id/capital_info"
            app:layout_constraintBottom_toBottomOf="@id/capital_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/pop_info"
    >
        <TextView
                android:text="@string/label_region"
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                style="@style/labelTextAppearance"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="Europe"
                android:layout_marginTop="4dp"
                style="@style/valueTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/regionView"/>
    </LinearLayout>

    <include
            layout="@layout/divider"
            android:id="@+id/divider_top"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/capital_info"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/divider_top"
            android:id="@+id/area_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="@+id/curr_info"
    >
        <TextView
                android:text="@string/label_area"
                android:layout_width="match_parent"
                style="@style/labelTextAppearance"
                android:layout_height="wrap_content"/>
        <TextView
                android:text="123 243 24"
                style="@style/valueTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/areaView"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/area_info"
            app:layout_constraintBottom_toBottomOf="@id/area_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pop_info"
            app:layout_constraintStart_toStartOf="@+id/lang_info">
        <TextView
                android:text="@string/label_population"
                style="@style/labelTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <TextView
                android:text="123 243 24"
                style="@style/valueTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/populationView"
        />
    </LinearLayout>

    <include
            layout="@layout/divider"
            android:id="@+id/divider_bottom"
            android:layout_width="0dp"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/area_info"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/curr_info"
            app:layout_constraintTop_toBottomOf="@id/divider_bottom"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/lang_info"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp">
        <TextView
                android:text="@string/label_currencies"
                android:layout_width="match_parent"
                style="@style/labelTextAppearance"
                android:layout_height="wrap_content"
        />
        <TextView
                android:text="Polski Złoty(PLN), Inna Waluta (INA)"
                style="@style/valueTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/currenciesView"
        />
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/curr_info"
            app:layout_constraintBottom_toBottomOf="@id/curr_info"
            app:layout_constraintStart_toEndOf="@+id/curr_info"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lang_info"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="8dp">
        <TextView
                android:text="@string/label_languages"
                style="@style/labelTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />
        <TextView
                android:text="Spanish, Polish"
                style="@style/valueTextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/languageView"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>